# age-threshold

./: Cargo.nix  Cargo.toml  DESIGN.md  README.md  demo.sh  flake.nix
age-threshold/: Cargo.toml
age-threshold/src/: cmd.rs  crypto.rs  format.rs  lib.rs  types.rs
age-threshold/src/cmd/tests/: mod.rs
age-threshold/src/cmd/tests/data/: 2outof3.age  key1.txt  key2.txt
age-threshold/src/format/: common.rs  read.rs  write.rs
age-threshold/src/types/: generic_identity.rs  generic_recipient.rs  identity.rs  mod.rs  recipient.rs  secret_share.rs
age-threshold/tests/: decrypt_test.rs
e2e_tests/src/: lib.rs
e2e_tests/tests/: lib.rs
integration/: Cargo.toml
nix/checks/clippy/: default.nix
nix/checks/fmt/: default.nix
nix/checks/generate-testdata/: default.nix
nix/shells/testdata/: default.nix
plugin/: Cargo.toml
plugin/src/: cmd.rs  format.rs  keys.rs  lib.rs  main.rs  protocol.rs
plugin/src/primitives/: stream.rs
plugin/src/types/: generic_identity.rs  generic_recipient.rs  mod.rs  threshold_identity.rs
spec/: index.md
src/: crypto.rs  generic_identity.rs  generic_recipient.rs  lib.rs  main.rs  recipient.rs  threshold_identity.rs  threshold_recipient.rs
src/types/: generic_identity.rs  mod.rs  threshold_identity.rs  threshold_recipient.rs
testdata/: .envrc  .justfile  Cargo.toml
testdata/data/2outof3/: key1  key2  key3  message.age  recipients
testdata/data/2outof3_pq/: key1  key2  key3  message  message.age  recipients
testdata/src/: lib.rs
tests/: demo.rs
three/: Cargo.toml
three/src/: lib.rs  main.rs
three/tests/: mod.rs
three/tests/data/: key3.txt
