[package]
name = "age-threshold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
age = { version = "0.10.0", features = ["plugin", "ssh", "cli-common", "armor"] }
age-core = "0.10.0"
base64 = "0.22.0"
bech32 = "0.11.0"
chacha20poly1305 = "0.10.1"
cookie-factory = "0.3.2"
curve25519-dalek = { version = "4.1.2", features = ["digest", "rand_core"] }
nom = "7.1.3"
nom-bufreader = "0.2.0"
once_cell = "1.19.0"
rand = "0.8.5"
sha2 = "0.10.8"

[dev-dependencies]
hex-literal = "0.4.1"
