[package]
name = "age-plugin-threshold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.9.2", features = ["plugin", "ssh", "cli-common"] }
age-core = "0.9.0"
age-plugin = "0.4.0"
bech32 = "0.9.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
cookie-factory = "0.3.2"
gf256 = { version = "0.3.0", features = ["shamir", "thread-rng"] }
hex-literal = "0.4.1"
hmac = "0.12.1"
nom = "7.1.3"
nom-bufreader = "0.2.0"
pin-project = "1.1.4"
rand = "0.8.5"
rlp = { version = "0.5.2", features = ["derive"] }
scrypt = "0.11.0"
sha2 = "0.10.8"
zeroize = "1.7.0"

[dev-dependencies]
tempfile = "3.10.0"
